--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/stack": "^6.3.12",
     "react": "18.2.0",
     "react-native": "0.71.1",
-    "react-native-markdown-display": "^1.8.2",
+    "react-native-markdown-display": "^7.0.0-alpha.2",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.19.0",
     "react-native-snap-carousel": "^3.9.1"
