--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "@react-navigation/stack": "^6.3.12",
+    "@types/react-native-snap-carousel": "^3.8.5",
+    "patch-package": "^6.5.1",
     "react": "18.2.0",
     "react-native": "0.71.1",
     "react-native-markdown-display": "^7.0.0-alpha.2",
